--- a/faq/troubleshooting-integration/platform-compatibility.mdx
+++ b/faq/troubleshooting-integration/platform-compatibility.mdx
@@ -1,208 +1,155 @@
 ---
-title: "What platforms and compilers are supported?"
-description: "A concise summary of official platform, compiler, and language standard support policy, with troubleshooting tips for unsupported or partially supported configurations."
+title: "Which platforms and compilers are supported?"
+description: "Learn about supported platforms, compilers, and the minimum C++ standard required. Get guidance on resolving incompatibilities and finding up-to-date support resources."
 ---
 
-# What platforms and compilers are supported?
+# Which Platforms and Compilers Are Supported?
 
-This document summarizes the officially supported platforms, compilers, and language standards for GoogleTest and GoogleMock, providing guidance to help you understand compatibility and troubleshoot unsupported or partially supported environments.
-
----
-
-## Overview of Supported Platforms
-
-GoogleTest (and GoogleMock) supports a broad range of operating systems aligned with Google's official C++ support policy. Support is maintained for environments where C++17 or later is available, reflecting the minimum language standard required.
-
-### Supported Operating Systems
-
-- **Windows** (including MSVC 2015 and newer)
-- **Linux** (including Android variants)
-- **macOS** and **iOS**
-- **FreeBSD, OpenBSD, NetBSD**
-- **Solaris**
-- **AIX**
-- **Haiku**
-- **QNX**
-- **Various embedded platforms** with partial support
-
-This extensive support ensures that tests written with GoogleTest and GoogleMock will run consistently across a variety of real-world deployment environments.
-
-## Compiler Support
-
-GoogleTest requires a compiler with full support for C++17. Supported compilers include, but are not limited to:
-
-- **MSVC** (Visual Studio 2015 or later)
-- **GCC** (versions supporting C++17 features, generally 7.0+ recommended)
-- **Clang/LLVM** (versions with C++17 support)
-- **Intel C++ Compiler** with appropriate C++17 compatibility
-
-### Compiler and Language Features Important for GoogleTest
-
-- Full or partial RTTI support (Run-Time Type Information)
-- Exception handling support (required for some features)
-- Threading libraries (e.g., `pthreads` on POSIX platforms)
-
-GoogleTest also detects platform features and compiler traits to adapt accordingly, but the above represent recommended environments.
-
-## Language Standard Requirements
-
-The minimum required C++ standard is **C++17**. This facilitates:
-
-- Use of modern language constructs that simplify the test code
-- Better compatibility with standard library features
-- Improved compiler diagnostics and optimizations
-
-Ensure your build environment sets the appropriate flags, such as `-std=c++17` for GCC/Clang or `/std:c++17` for MSVC.
-
-## Supported Platforms Details from Internal Macros
-
-Under the hood, GoogleTest uses internal macros to detect the OS and adapt accordingly. Some examples include:
-
-- `GTEST_OS_WINDOWS` for Windows variants
-- `GTEST_OS_LINUX`, `GTEST_OS_MAC`, `GTEST_OS_FREEBSD`, etc., for Unix-like systems
-
-These macros govern how GoogleTest configures itself and how it manages platform-specific features like threading, file system access, and regex handling.
-
-## Threading and Synchronization
-
-Thread safety is an important aspect:
-
-- GoogleTest is thread-safe on systems where `pthreads` or Windows threading APIs are available.
-- Platform checks ensure the correct synchronization primitives are used.
-
-If your platform does not support these features, GoogleTest will disable thread safety features accordingly.
-
-## Troubleshooting Unsupported or Partially Supported Configurations
-
-If your platform or toolchain is not officially supported or lacking full C++17 capabilities:
-
-- You may encounter **build errors** or **linker issues**.
-- GoogleTest may not run correctly or could lack some features like death tests, stream redirection, or typed tests.
-
-### Recommendations
-
-1. **Verify compiler and OS compatibility** with the supported list above.
-2. **Ensure C++17 standard support** is enabled in your compiler settings.
-3. **Check feature macros** such as `GTEST_HAS_PTHREAD` if multi-threaded test execution is desired.
-4. If using a cross-compiler or embedded system, consider:
-   - Setting specific feature macros manually to adjust GoogleTest’s behavior.
-   - Consulting platform maintainers or community forums.
-5. Use the [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md) and [Installation with CMake](https://github.com/google/googletest/blob/main/docs/installation-cmake.md) for practical tips.
-
-## Summary Table of Key Configuration Macros
-
-| Macro Name                 | Purpose                                          | Typical Assigned Value |
-|----------------------------|-------------------------------------------------|------------------------|
-| `GTEST_HAS_PTHREAD`         | Indicates pthreads availability                  | 1 (if pthread available), else 0 |
-| `GTEST_HAS_RTTI`            | Enables RTTI support                             | 1 (if RTTI enabled) |
-| `GTEST_HAS_EXCEPTIONS`      | Enables exception support                        | 1 (if exceptions enabled) |
-| `GTEST_HAS_DEATH_TEST`      | Enables death test support                       | 1 (if supported) |
-| `GTEST_IS_THREADSAFE`       | Enables thread safety                            | 1 (if platform supports) |
-| `GTEST_HAS_STD_WSTRING`     | Indicates use of `std::wstring`                  | 1 (if available) |
-| `GTEST_HAS_POSIX_RE`        | Enables POSIX regex support                       | 1 if platform supports POSIX regex |
-
-## Practical Tips for Ensuring Compatibility
-
-- Build GoogleTest with its **native CMake scripts**, which automatically detect supported features and set appropriate macros.
-- Use updated compilers that fully respect the **C++17 standard**.
-- Consult the [System Requirements](https://github.com/google/googletest/blob/main/docs/system-requirements.md) for comprehensive platform and compiler info.
-- When targeting embedded or unusual platforms, consider using GoogleTest’s macros to conditionally compile only supported features.
-
-## Related Topics
-
-- [System Requirements](https://github.com/google/googletest/blob/main/docs/system-requirements.md)
-- [Installation with CMake](https://github.com/google/googletest/blob/main/docs/installation-cmake.md)
-- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md)
-- [GoogleMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html)
+Ensure your development and testing environment is compatible with GoogleTest and GoogleMock. This guide details supported platforms, compiler requirements, the C++ standard baseline, and how to address common incompatibilities. It also provides practical guidance on verifying platform support and where to find the most current compatibility information.
 
 ---
 
-## Example: Compiler Flag Settings in CMake
+## Overview
 
-Below snippet shows typical CMake configuration ensuring proper compiler flags on supported platforms:
+GoogleTest and GoogleMock require a minimum of C++17 support across your compiler toolchain. They officially support a wide variety of platforms in alignment with Google's [Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support) and maintain an evolving compatibility matrix on GitHub. Supported platforms include major desktop and server operating systems such as Linux distributions, Windows (desktop and variants), and Mac OS, along with several less common or embedded platforms.
+
+
+## Supported Platforms
+
+- **Desktop & Server OSes:** Linux, Windows Desktop (including MinGW), macOS.
+- **Mobile & Embedded OSes:** iOS, Android, Windows Mobile, Windows RT, and limited embedded systems.
+- **Some UNIX Flavors:** FreeBSD, OpenBSD, Solaris, AIX, HP-UX, QNX, etc.
+
+## Supported Compilers
+
+GoogleTest supports these compilers with respective minimum versions:
+
+- **GCC:** Version 7.0 or newer (to ensure robust C++17 support)
+- **Clang:** Recent stable versions supporting C++17 fully
+- **MSVC:** Visual C++ 2017 Update 3 or later (VS 2017 version 15.3+) is required
+- **IntelLLVM:** Supported with C++17 compliance
+
+The MSVC compiler must be at least version 19.00 (Visual C++ 2015) to build GoogleMock successfully.
+
+## Minimum C++ Standard Requirement
+
+C++17 is the minimum required standard to compile and use GoogleTest and GoogleMock effectively. To ensure compliance:
+
+- In CMake, specify:
+  ```cmake
+  set(CMAKE_CXX_STANDARD 17)
+  set(CMAKE_CXX_STANDARD_REQUIRED ON)
+  ```
+
+- If not using CMake or another build system, pass the appropriate compiler flags manually (e.g., `-std=c++17` for GCC/Clang).
+
+## How GoogleTest Detects the Platform and Environment
+
+GoogleTest and GoogleMock use internal environment-detection macros to identify operating system, compiler, threading support, and other platform features. This detection enables:
+
+- Enabling/disabling platform-specific optimizations
+- Selecting appropriate synchronization primitives
+- Configuring regex and other utility use
+
+These macros cover over 30 platforms, including desktop, mobile, embedded, and various UNIX systems. The detection happens automatically but can be overridden by defining certain macros at build time.
+
+## Common Issues and How to Resolve Them
+
+### 1. Compiler Version Too Old
+- **Problem:** Compilation errors or C++17 features unavailable.
+- **Solution:** Upgrade your compiler to meet the minimum version requirements. MSVC users must use Visual Studio 2017 Update 3 or later.
+
+### 2. C++ Standard Not Set or Incorrect
+- **Problem:** You see errors indicating unsupported language features.
+- **Solution:** Explicitly set the C++ standard to C++17 or higher using your build system.
+
+### 3. Missing or Misconfigured Thread Support
+- **Problem:** GoogleTest is not thread-safe or has linking errors related to pthread.
+- **Solution:** Enable pthread support with `-DGTEST_HAS_PTHREAD=1` if your platform supports it. With CMake, this detection is automatic.
+
+### 4. Windows Runtime Environment Variants
+- **Problem:** Building for Windows RT, Phone, or UWP causes incompatibilities.
+- **Solution:** Verify your target environment and adjust project settings accordingly. Some Windows variants have restricted API surfaces impacting GoogleTest support.
+
+### 5. Stream Redirection Support
+- Not all embedded or mobile environments support IO stream redirection, needed for some features like death tests.
+- Confirm that your environment supports it or disable features relying on stream redirection if necessary.
+
+## Verifying Platform Compatibility
+
+You can check macro definitions within your build to verify which platform GoogleTest detects. For example, inspect `GTEST_OS_*` macros (like `GTEST_OS_LINUX`, `GTEST_OS_WINDOWS_DESKTOP`, `GTEST_OS_MAC`) defined during compilation. Logging the values of these macros can help confirm platform detection.
+
+GoogleTest also defines macros such as `GTEST_HAS_PTHREAD` and `GTEST_IS_THREADSAFE` to indicate threading support.
+
+## Resources for Latest Support Details
+
+- Official supported platforms and compiler versions matrix: [Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support)
+- Live supported platforms table on GitHub: [Google OSS Policies Info](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md)
+- Source code detection macros in `gtest-port-arch.h` and `gtest-port.h` within the repository for environment details
+
+---
+
+## Practical Tips for Success
+
+- Always use at least C++17 when configuring your build system.
+- Use the official CMake build scripts provided by GoogleTest to ease configuration across platforms.
+- For Windows builds, be mindful of runtime library linkage—use the `gtest_force_shared_crt` option in CMake to align runtimes.
+- On Linux and macOS, ensure pthread is available and linked to support thread-safe tests.
+- If using embedded or less common platforms, verify that macros for key features like filesystem and threading are properly defined.
+
+## Example: Setting C++17 Standard in CMake
 
 ```cmake
+cmake_minimum_required(VERSION 3.14)
+project(MyTestProject CXX)
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Example for MSVC static CRT
-if(MSVC)
-  foreach(flag_var
-          CMAKE_C_FLAGS CMAKE_C_FLAGS_DEBUG CMAKE_C_FLAGS_RELEASE
-          CMAKE_CXX_FLAGS CMAKE_CXX_FLAGS_DEBUG CMAKE_CXX_FLAGS_RELEASE)
-    string(REPLACE "/MD" "-MT" ${flag_var} "${${flag_var}}")
-  endforeach()
-endif()
+add_subdirectory(googletest)  # adding GoogleTest as a subproject
+
+add_executable(my_test my_test.cpp)
+target_link_libraries(my_test gtest gtest_main pthread)
 ```
 
-This ensures the compiler is set to C++17, and addresses runtime library inconsistencies in MSVC.
+## Helpful Macros for Manual Overrides
 
-## Summary Diagram: Platform Detection Flow
+In some cases, you may forcibly enable or disable features if the automated detection is incorrect.
 
-```mermaid
-flowchart TD
-  Start([Start]) --> CheckOS{Detect OS}
+- To enable pthreads support manually:
+  ```
+  -DGTEST_HAS_PTHREAD=1
+  ```
 
-  subgraph OS Detection
-    CheckOS -->|Windows| Windows
-    CheckOS -->|Linux| Linux
-    CheckOS -->|MacOS/iOS| MacOS
-    CheckOS -->|Other Unix| Unix
-    CheckOS -->|Unsupported| Unsupported
-  end
+- To disable streams redirection if unsupported:
+  ```
+  -DGTEST_HAS_STREAM_REDIRECTION=0
+  ```
 
-  Windows --> CheckCompilerWin{Compiler?}
-  Linux --> CheckCompilerLinux{Compiler?}
-  MacOS --> CheckCompilerMac{Compiler?}
-  Unix --> CheckCompilerUnix{Compiler?}
-
-  CheckCompilerWin -->|MSVC >= VS2015| Supported
-  CheckCompilerWin -->|Others| Unsupported
-
-  CheckCompilerLinux -->|GCC >= 7.0 | Supported
-  CheckCompilerLinux -->|Clang >= 3.9| Supported
-  CheckCompilerLinux -->|Others| Unsupported
-
-  CheckCompilerMac -->|Clang >= 6.0 | Supported
-  CheckCompilerMac -->|Others| Unsupported
-
-  CheckCompilerUnix -->|Known supported compilers| Supported
-  CheckCompilerUnix -->|Others| Unsupported
-
-  Unsupported([Unsupported platform or compiler]) --> End([End])
-  Supported([Fully supported environment]) --> End
-```
-
-This flow illustrates how GoogleTest determines support based on OS and compiler versions.
+- To build Google Mock on MSVC, ensure compiler version is Visual Studio 2015 or newer, otherwise compilation will error out.
 
 ---
 
-## Conclusion
+## Troubleshooting Compatibility
 
-GoogleTest and GoogleMock provide robust support for a wide variety of platforms and compilers underpinned by C++17 capabilities. By confirming that your build environment aligns with these requirements and leveraging provided macros and build scripts, you can ensure smooth setup and reliable testing workflows.
+If you encounter issues:
 
-<Tip>
-Ensure your compiler and environment support C++17 and threading facilities to fully leverage GoogleTest features.
-</Tip>
+- Verify compiler version and flags.
+- Confirm platform macro detections by printing `GTEST_OS_*` macros.
+- Check if your platform supports C++17 fully and if your standard library is compliant.
+- Review the [GitHub Issues](https://github.com/google/googletest/issues) for known platform-specific issues.
+- Confirm that the build system invokes the compiler with the correct runtime linkage options, especially on Windows.
 
-<Tip>
-Use the official CMake scripts provided to automatically detect platform features and set correct compiler flags.
-</Tip>
-
-<Tip>
-Consult the related [System Requirements](https://github.com/google/googletest/blob/main/docs/system-requirements.md) and installation guides for detailed setup instructions.
-</Tip>
 
 ---
 
-## Getting Further Help
+## Additional Resources
 
-If you encounter challenges with unsupported platforms or compilers, reach out via the official GoogleTest mailing list or browse community forums. Participating in GitHub issues or reviewing the contribution guides can also provide guidance.
-
-Related support resources:
-
-- **GoogleTest GitHub Repository:** [https://github.com/google/googletest](https://github.com/google/googletest)
-- **Mailing List:** googletestframework@googlegroups.com
-- **Community Forums:** Available via Google and GitHub discussions
+- [System Requirements & Supported Platforms](https://github.com/google/googletest/blob/main/docs/prerequisites-installation-setup/system-requirements-supported-platforms.md)
+- [Installation with CMake and Bazel](https://github.com/google/googletest/blob/main/docs/prerequisites-installation-setup/installation-cmake-bazel.md)
+- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md)
+- [GoogleTest Official GitHub Repository](https://github.com/google/googletest)
 
 ---
+
+For a successful start with GoogleTest and GoogleMock, ensuring your platform, compiler, and C++ environment meet these requirements is essential. This page equips you with the knowledge to verify and adjust your setup with clarity and confidence.
